# KIWI

./: .gitignore  .mcp.json  AGENTS.md  MCP_INTEGRATION.md  MCP_POWERPOINT_INTEGRATION.md  QUICK_START.md  README.md  launch.sh  start.sh  stop.sh
backend/: .env.example  .env.production  clean_empty_messages.py  create_test_user.py  init_admin_user.py  pyproject.toml  pytest.ini  run.py
backend/alembic/: env.py
backend/alembic/versions/: add_agent_favorites_table.py  add_document_processing_status.py  add_feedbackloop_table.py  add_pgvector_embedding_vec.py  add_user_authentication.py  add_user_security_flags.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  agents.py  alert.py  auth.py  chats.py  documents.py  documents_processing.py  feature_updates.py  messages.py  powerpoint.py  router.py  search.py  sessions.py
backend/app/initial_data/: __init__.py  admin_user.py  default_admin.py  official_agents.py
backend/app/models/: __init__.py  agent.py  base.py  chat.py  document.py  document_chunk.py  feedback_loop.py  message.py  rbac.py  session.py  user.py
backend/scripts/: setup_pgvector.py
backend/tests/: conftest.py  test_chat_service.py  test_full_pipeline.py  test_llm_modes.py  test_mcp_connection.py  test_mcp_direct.py  test_mcp_integration.py  test_mcp_simple.py  test_message_service.py  test_mistral_service.py  test_mistral_tools.py  test_openai_service.py  test_openai_tools.py  test_pixtral_local.py  test_powerpoint_integration.py  test_rbac_service.py  test_vision_local.py  test_vllm_tools.py
docs/: DEVELOPMENT.md  (+5 more)
(+162 files in other folders)
