[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "mistralai>=1.9.1",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-socketio>=5.13.0",
    "redis>=6.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
    "email-validator>=2.2.0",
    "bcrypt>=4.0.0",
    "pyproject-toml>=0.1.0",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "python-pptx>=1.0.2",
    "mcp>=1.13.1",
    "sentence-transformers>=3.0.0",
]
